# Bloom_Engine

./: .gitignore  CMakeLists.txt  Doxyfile  ReadMe.md  main.cpp
Bloom_Editor/: CMakeLists.txt
Core/include/: Animation.h  AnimationEngine.h  Audio.h  AudioEngine.h  Camera.h  Collider.h  CollisionEngine.h  Component.h  ComponentTypes.h  Core.h  Dispatcher.h  Entity.h  EntityManager.h  Event.h  FileSystem.h  GameState.h  InputProcessor.h  KeyCodes.h  LuaGameState.h  Physics.h  PhysicsEngine.h  Player.h  Renderable.h  RenderingEngine.h  ScriptingEngine.h  Sprite.h  StateMachine.h  Texture.h
Core/src/: AnimationEngine.cpp  AudioEngine.cpp  CollisionEngine.cpp  Component.cpp  Core.cpp  Dispatcher.cpp  EntityManager.cpp  FileSystem.cpp  InputProcessor.cpp  PhysicsEngine.cpp  RenderingEngine.cpp  ScriptingEngine.cpp  StateMachine.cpp
Documentation/html/: _animation_8h.html  _animation_8h_source.html  _animation_engine_8h_source.html  _audio_8h_source.html  _audio_engine_8h_source.html  _camera_8h_source.html  _code_editor_8h_source.html  _collider_8h_source.html  _collision_engine_8h_source.html  _component_8h_source.html  _component_types_8h_source.html  _console_log_window_8h_source.html  _console_stream_buffer_8h_source.html  _core_8h.html  _core_8h_source.html  _dispatcher_8h_source.html  _editor_8h_source.html  _entity_8h_source.html  _entity_manager_8h.html  _entity_manager_8h_source.html  _event_8h_source.html  _file_system_8h_source.html  _file_tree_8h_source.html  _game_state_8h_source.html  _input_processor_8h.html  _input_processor_8h_source.html  _lua_game_state_8h_source.html  _operations_log_8h_source.html  _physics_8h_source.html  _physics_engine_8h_source.html  _player_8h_source.html  _renderable_8h_source.html  _rendering_engine_8h.html  _rendering_engine_8h_source.html  _scripting_engine_8h_source.html  _sprite_8h_source.html  _state_machine_8h_source.html  _texture_8h_source.html  _transform_8h_source.html  annotated.html  (+86 more)
Documentation/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_6.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  (+3 more)
Documentation/latex/: _animation_8h.tex  _animation_8h_source.tex  _animation_engine_8h_source.tex  _audio_8h_source.tex  _audio_engine_8h_source.tex  _camera_8h_source.tex  _code_editor_8h_source.tex  _collider_8h_source.tex  _collision_engine_8h_source.tex  _component_8h_source.tex  _component_types_8h_source.tex  _console_log_window_8h_source.tex  _console_stream_buffer_8h_source.tex  _core_8h.tex  _core_8h_source.tex  _dispatcher_8h_source.tex  _editor_8h_source.tex  _entity_8h_source.tex  _entity_manager_8h.tex  _entity_manager_8h_source.tex  _event_8h_source.tex  _file_system_8h_source.tex  _file_tree_8h_source.tex  _game_state_8h_source.tex  _input_processor_8h.tex  _input_processor_8h_source.tex  _lua_game_state_8h_source.tex  _operations_log_8h_source.tex  _physics_8h_source.tex  _physics_engine_8h_source.tex  _player_8h_source.tex  _renderable_8h_source.tex  _rendering_engine_8h.tex  _rendering_engine_8h_source.tex  _scripting_engine_8h_source.tex  _sprite_8h_source.tex  _state_machine_8h_source.tex  _texture_8h_source.tex  _transform_8h_source.tex  annotated.tex  (+47 more)
Editor/include/: CodeEditor.h  ConsoleLogWindow.h  Editor.cpp  Editor.h  FileTree.h  OperationsLog.cpp  OperationsLog.h  default.lua
Game/: Bloom_Sandbox.tiled-session  map001.tmx
Game/Levels/: Level1.lua  Level2.lua  Level3.lua
Game/State/: GameplayState.h
Game/fmod/.cache/: {2fa89f31-948e-45a6-9773-779cf0da2c78}.pdc  {37c63aed-e70b-4b3d-8ed8-d15a1c964db5}.pdc  {7c124881-ea07-4acb-8bbb-7b2a44b97741}.pdc
Game/fmod/.unsaved/: metadataFileMapping.data
Game/fmod/Metadata/: Tags.xml  Workspace.xml
Game/levels/: Level2.lua
Game/mystic_woods_free_2.1/tsx/: Serene_Village_16x16.tsx  TX Tileset Grass.tsx  TX Tileset Stone Ground.tsx  grass.tsx  plains.tsx
Game/src/: GameplayState.h
Game/src/actors/: Player.lua
Game/src/levels/: Level1.lua  Level2.lua  Level3.lua
Game/src/scenes/: Dark_Path_Ritual.lua  Level1.lua  Level2.lua
SideScroll_Game/fmod/.cache/: {7c124881-ea07-4acb-8bbb-7b2a44b97741}.pdc
SideScroll_Game/src/actors/: Player.lua
SideScroll_Game/src/scenes/: SideScroll_1.lua
TopDown_Game/fmod/.cache/: {26573bea-039d-427f-b591-a4a27eb31e2f}.pdc
TopDown_Game/fmod/Metadata/: Master.xml  Mixer.xml
editor/: CMakeLists.txt  main.cpp
editor/Game/Levels/: Level1.lua
editor/Game/State/: GameplayState.h
editor/include/: CodeEditor.h  ConsoleLogWindow.h  ConsoleStreamBuffer.h  FileTree.h
engine/: CMakeLists.txt
engine/include/BloomEngine/: Animation.h  Core.h  Entity.h  EntityManager.h  GameState.h  Physics.h  PhysicsEngine.h  RenderingEngine.h  ScriptingEngine.h  Texture.h
engine/src/: AnimationEngine.cpp  CollisionEngine.cpp  Component.cpp  Core.cpp  Dispatcher.cpp  EntityManager.cpp  FileSystem.cpp  InputProcessor.cpp  PhysicsEngine.cpp  RenderingEngine.cpp  ScriptingEngine.cpp  StateMachine.cpp
include/Component/: Animation.h  Collider.h  ComponentTypes.h  Event.h  Input.h  Physics.h  Renderable.h  Sprite.h  Transform.h
include/Entity/: Entity.h
include/GameState/: GameState.h  LuaGameState.h
include/System/: AnimationEngine.h  CollisionEngine.h  Core.h  Dispatcher.h  EntityManager.h  FileSystem.h  InputProcessor.h  PhysicsEngine.h  RenderingEngine.h  ScriptingEngine.h  StateMachine.h  game_logic.lua
src/Component/: Component.cpp
src/Entity/: Entity.cpp
src/System/: AnimationEngine.cpp  CollisionEngine.cpp  Core.cpp  Dispatcher.cpp  EntityManager.cpp  FileSystem.cpp  InputProcessor.cpp  PhysicsEngine.cpp  RenderingEngine.cpp  ScriptingEngine.cpp  StateMachine.cpp
(+107 files in other folders)
